fix: z-index

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -4,6 +4,7 @@
     width: 100%;
     min-height: 100%;
     max-width: 1280px;
+    z-index: 10;
 
     > .container {
         flex: 1;
